# zkm-project-template

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  clippy.toml  install_mips_rust_tool  run-add-go-local-proving.sh  run-add-go-network-proving.sh  run-revme-local-proving.sh  run-revme-network-provin.sh
.github/workflows/: ci.yml  prove.yml
contracts/: .gitignore  README.md
contracts/script/: ZKMVerifierGroth16.s.sol  ZKMVerifierPlonk.s.sol  erc20.s.sol  verifier.s.sol
contracts/src/: Fibonacci.sol  IZKMVerifier.sol  erc20.sol  verifier.sol
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
contracts/src/v1.0.0/: Groth16Verifier.sol  PlonkVerifier.sol  ZKMVerifierGroth16.sol  ZKMVerifierPlonk.sol
contracts/test/: Fibonacci.t.sol  ZKMVerifierGroth16.t.sol  ZKMVerifierPlonk.t.sol  erc20.t.sol  verifier.t.sol
contracts/verifier/: public_inputs.json  snark_proof_with_public_inputs.json  verifying.key
guest/: Cargo.toml  README.md
guest-program/: README.md
guest-program/add-go/: go.mod  go.sum
guest-program/mem-alloc-vec/: Cargo.toml
guest-program/mem-alloc-vec/src/: main.rs
guest-program/mem_alloc_vec/: Cargo.toml
guest-program/mem_alloc_vec/src/: main.rs  memory_allocations.rs
guest-program/minigeth/: Makefile  README.md  README_CN.md  pnpm-lock.yaml
guest-program/minigeth/mipsevm/: build.sh  db.sql  go.mod  go.sum  instrumented.go  logw.go  main.go  memory.go  memory_test.go  metadata.go  mips.go  page.go  page_test.go  patch.go  state.go  state_test.go  witness.go
guest-program/mips-elf/: zkm-mips-elf-add-go
guest-program/revme/: Cargo.toml
guest-program/revme/src/: main.rs
guest-program/sha2-composition/: Cargo.toml
guest-program/sha2-go/: go.mod  go.sum  main.go
guest-program/sha2-precompile/: Cargo.toml
guest-program/sha2-rust/: Cargo.toml
guest-program/sha2-rust/src/: main.rs
guest/src/: main.rs
host/: Cargo.toml  run-proving.sh
host-network/: Cargo.toml  build.rs  proving.sh
host-network/output/: snark_proof_with_public_inputs.json
host-network/src/: main.rs
host-network/test-vectors/: 3168249.json
host-program/: Cargo.toml  build.rs  run-add-go-local-proving.sh  run-add-go-network-proving.sh  run-local-proving.sh  run-network-proving.sh  run-proving.sh  run-revme-local-proving.sh  run-revme-network-provin.sh  run-revme-network-proving.sh
host-program/mem-alloc-vec/: Cargo.toml  build.rs  run-proving.sh
host-program/mem-alloc-vec/src/: main.rs
host-program/revme/: Cargo.toml  build.rs  run-proving.sh
host-program/revme/src/: main.rs
host-program/sha2-composition/: Cargo.toml  build.rs
host-program/sha2-composition/src/: main.rs
host-program/sha2-go/: Cargo.toml  run-proving.sh
host-program/sha2-go/src/: main.rs
host-program/sha2-precompile/: Cargo.toml  build.rs
host-program/sha2-precompile/src/: main.rs
host-program/sha2-rust/: Cargo.toml  build.rs  run-proving.sh
host-program/sha2-rust/src/: main.rs
host-program/test-vectors/: 244.json  test.json
host-program/tool/: .csr  .key  .pem
host/src/: main.rs
host/tool/: certgen.sh
lib/: Cargo.toml
sdk/: Cargo.toml  README.md  build.rs
sdk/src/: input.rs  lib.rs  prover.rs
sdk/src/local/: cpu.rs  local.rs  mod.rs  prover.rs  snark.rs  stark.rs  util.rs
sdk/src/local/libsnark/: compile.sh  compile_and_install.sh  contract.go  go.mod  go.sum  libsnark.go  snark_prover.go
sdk/src/network/: mod.rs  prover.rs
sdk/src/proto/: stage.proto
verifier/: verifier.sol.tmpl
