[workspace]
members = [
   "host-program/sha2-go",
   "host-program/sha2-rust",
   "host-program/revme",
   "host-program/mem-alloc-vec",
   "host-program/sha2-composition",
   "sdk"
  ]
resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true