[package]
name = "host-network"
version = "1.0.0"
edition = "2021"

[dependencies]
zkm-sdk-network = { path = "../sdk", package = "zkm-sdk" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
env_logger = "0.10.2"
hex = "0.4.3"
bincode = "1.3.3"
guest-std = { git = "https://github.com/zkMIPS/revme", package = "guest-std", branch = "zkMIPS" }
log = "0.4.27"
base64 = "0.21.7"
anyhow = "1.0.97"

[build-dependencies]
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
