[package]
name = "zkm-host-program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkm-prove"
path = "src/bin/zkm-prove.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkm-sdk = { path = "../sdk", features = ["snark"] }
bincode = "1.3.3"
common = { git = "https://github.com/zkMIPS/zkm-prover", branch = "main", default-features = false } 
sha2 = { version = "0.10.8", default-features = false }

tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
#ethers = "2.0.14"

itertools = "0.11.0"
log = { version = "0.4.14", default-features = false }
anyhow = "1.0.75"
num = "0.4.0"
num-bigint = "0.4.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"

rand_chacha = "0.3.1"
once_cell = "1.13.0"
static_assertions = "1.1.0"
byteorder = "1.5.0"
hex = "0.4"

elf = { version = "0.7", default-features = false }
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.8.0"

[features]
test = []
