[package]
name = "mem-alloc-vec"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkm-sdk = { path = "../../sdk", features = ["snark"] }
zkm-recursion = {git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }

#tonic = "0.8.1"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
log = { version = "0.4.14", default-features = false }
env_logger = "0.10.0"
anyhow = "1.0.75"
[build-dependencies]
tonic-build = "0.8.0"
zkm-build = { git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }

[features]
test = []
