[package]
name = "revme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkm-sdk = { path = "../../sdk", features = ["snark"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
#ethers = "2.0.14"
log = { version = "0.4.14", default-features = false }
env_logger = "0.10.0"
anyhow = "1.0.75"
[build-dependencies]
tonic-build = "0.8.0"

[features]
test = []
