[package]
name = "sha2-go"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkm-sdk = { path = "../../sdk", features = ["snark"] }
bincode = "1.3.3"

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
#ethers = "2.0.14"

itertools = "0.11.0"
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
anyhow = "1.0.75"
hex = "0.4"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.8.0"

[features]
test = []
