[package]
name = "sha2-precompile"
version = "0.1.0"
edition = "2021"


[dependencies]
zkm-sdk = { path = "../../sdk", features = ["snark"] }
bincode = "1.3.3"
sha2 = { version = "0.10.8", default-features = false }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
#ethers = "2.0.14"

log = { version = "0.4.14", default-features = false }
anyhow = "1.0.75"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.8.0"
zkm-build = { git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }

[features]
test = []
